--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ library = []
 optimize = """docker run --rm -v "$(pwd)":/code \
   --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
   --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
-  cosmwasm/rust-optimizer:0.12.10
+  cosmwasm/rust-optimizer:0.13.0
 """
 
 [dependencies]
@@ -48,7 +48,7 @@ cw2 = "1.0.1"
 schemars = "0.8.10"
 serde = { version = "1.0.145", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
-andromeda-std = { git = "https://github.com/andromedaprotocol/andromeda-core", branch = "amp" }
+andromeda-std = { version = "0.1.0" }
 
 [dev-dependencies]
 cw-multi-test = "0.16.2"
