--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ cw2 = "1.1.1"
 schemars = "0.8.15"
 serde = { version = "1.0.189", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.49" }
-andromeda-std = { version = "0.1.0" }
+andromeda-std = { version = "1.0.0-rc1" }
 
 [dev-dependencies]
 cw-multi-test = "0.17.0"
