--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,3 +2,4 @@
 wasm = "build --release --lib --target wasm32-unknown-unknown"
 unit-test = "test --lib"
 schema = "run --bin schema"
+integration-test = "test --lib integration_tests"
